<resources>
    <string name="app_name">ZayvE_test</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="loginButtonText">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">user name</string>
    <string name="signUpButtonText">SIGN UP</string>
    <string name="loginExtra">Already have an account?</string>
    <string name="newAccount">Create a new account</string>
    <string name="avatar_pic">avatar pic</string>
    <string name="top_interests">Top Interests</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="title_activity_zayve">Zayve</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_test_host">TestHostActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>